--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,6 @@
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
+    <a href="/about.html">Abe YAar!</a>
     </body>
 </html>
