--- a/css/resume.css
+++ b/css/resume.css
@@ -139,7 +139,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-secondary {
-  color: #009999 !important;
+  color: #454d54 !important;
   font-size: 30px;
 }
 }
