--- a/css/resume.css
+++ b/css/resume.css
@@ -131,7 +131,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #009999 !important;
+  background-color: #ffffff !important;
 }
 
 .text-primary {
