--- a/css/resume.css
+++ b/css/resume.css
@@ -62,6 +62,7 @@ h2 {
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 600;
   text-transform: uppercase;
+  color: #454d54;
 }
 
 @media (min-width: 992px) {
