--- a/css/resume.css
+++ b/css/resume.css
@@ -29,14 +29,18 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 .subheading {
   text-transform: uppercase;
   font-weight: 400;
   font-family: 'Open Sans', serif;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 
 .list-social-icons a {
